Update column description

--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -1110,9 +1110,7 @@
     "\n",
     "### Data Inspection\n",
     "\n",
-    "- From the [link](https://archive.ics.uci.edu/dataset/296/diabetes+130-us+hospitals+for+years+1999-20)\n",
-    "\n",
-    "Below is the description of the columns in the dataset\n"
+    "- From the [link](https://archive.ics.uci.edu/dataset/296/diabetes+130-us+hospitals+for+years+1999-20), below is the description of the columns in the dataset\n"
    ]
   },
   {
@@ -1231,52 +1229,60 @@
    "source": [
     "### Data Description\n",
     "\n",
-    "From the link, below is a description of the data set columns\n",
-    "\n",
     "This dataset provides information on patient encounters, medications, and outcomes, including readmission status. Below is a detailed description of the key variables:\n",
     "\n",
-    "| **Variable Name**         | **Description**                                                                 |\n",
-    "|----------------------------|---------------------------------------------------------------------------------|\n",
-    "| encounter_id               | Unique identifier of an encounter                                               |\n",
-    "| patient_nbr                | Unique identifier of a patient                                                  |\n",
-    "| race                       | Values: Caucasian, Asian, African American, Hispanic, and other                 |\n",
-    "| gender                     | Values: male, female, and unknown/invalid                                       |\n",
-    "| age                        | Grouped in 10-year intervals: [0, 10), ..., [90, 100)                           |\n",
-    "| weight                     | Weight in pounds                                                                 |\n",
-    "| admission_type_id          | Integer identifier for values like emergency, urgent, elective                  |\n",
-    "| discharge_disposition_id   | Integer for outcomes like discharged home, expired, etc.                        |\n",
-    "| admission_source_id        | Integer for values like physician referral, emergency room                      |\n",
-    "| time_in_hospital           | Number of days between admission and discharge                                  |\n",
-    "| diag_3                     | Additional diagnosis coded by ICD-9 (954 distinct values)                       |\n",
-    "| number_diagnoses           | Number of diagnoses entered                                                      |\n",
-    "| max_glu_serum              | Serum glucose test result range: >200, >300, normal, none                       |\n",
-    "| A1Cresult                  | Test result categories: >8, >7, normal, none                                    |\n",
-    "| metformin                  | Drug prescription change: up, down, steady, or no                               |\n",
-    "| repaglinide                | Same as above                                                                    |\n",
-    "| nateglinide                | Same as above                                                                    |\n",
-    "| chlorpropamide             | Same as above                                                                    |\n",
-    "| glimepiride                | Same as above                                                                    |\n",
-    "| acetohexamide              | Same as above                                                                    |\n",
-    "| glipizide                  | Same as above                                                                    |\n",
-    "| glyburide                  | Same as above                                                                    |\n",
-    "| tolbutamide                | Same as above                                                                    |\n",
-    "| pioglitazone               | Same as above                                                                    |\n",
-    "| rosiglitazone              | Same as above                                                                    |\n",
-    "| acarbose                   | Same as above                                                                    |\n",
-    "| miglitol                   | Same as above                                                                    |\n",
-    "| troglitazone               | Same as above                                                                    |\n",
-    "| tolazamide                 | Same as above                                                                    |\n",
-    "| examide                    | Same as above                                                                    |\n",
-    "| citoglipton                | Same as above                                                                    |\n",
-    "| insulin                    | Same as above                                                                    |\n",
-    "| glyburide-metformin        | Same as above                                                                    |\n",
-    "| glipizide-metformin        | Same as above                                                                    |\n",
-    "| glimepiride-pioglitazone   | Same as above                                                                    |\n",
-    "| metformin-rosiglitazone    | Same as above                                                                    |\n",
-    "| metformin-pioglitazone     | Same as above                                                                    |\n",
-    "| change                     | Indicates medication change: change or no change                                |\n",
-    "| diabetesMed                | Indicates if diabetic medication was prescribed                                 |\n",
-    "| readmitted                 | Readmission: <30 days, >30 days, or no readmission                               |\n"
+    "| **No.** | **Variable Name**         | **Description**                                                                 |\n",
+    "|---------|----------------------------|---------------------------------------------------------------------------------|\n",
+    "| 1       | encounter_id               | Unique identifier of an encounter                                               |\n",
+    "| 2       | patient_nbr                | Unique identifier of a patient                                                  |\n",
+    "| 3       | race                       | Values: Caucasian, Asian, African American, Hispanic, and other                 |\n",
+    "| 4       | gender                     | Values: male, female, and unknown/invalid                                       |\n",
+    "| 5       | age                        | Grouped in 10-year intervals: [0, 10), ..., [90, 100)                           |\n",
+    "| 6       | weight                     | Weight in pounds                                                                |\n",
+    "| 7       | admission_type_id          | Integer identifier for values like emergency, urgent, elective                  |\n",
+    "| 8       | discharge_disposition_id   | Integer for outcomes like discharged home, expired, etc.                        |\n",
+    "| 9       | admission_source_id        | Integer for values like physician referral, emergency room                      |\n",
+    "| 10      | time_in_hospital           | Number of days between admission and discharge                                  |\n",
+    "| 11      | payer_code                 | Integer identifier for insurance payer (e.g., Blue Cross/Blue Shield, Medicare) |\n",
+    "| 12      | medical_specialty          | Integer identifier of the admitting physician's specialty (e.g., cardiology)    |\n",
+    "| 13      | num_lab_procedures         | Number of lab tests performed during the encounter                              |\n",
+    "| 14      | num_procedures             | Number of procedures (other than lab tests) performed during the encounter      |\n",
+    "| 15      | num_medications            | Number of distinct generic names administered during the encounter              |\n",
+    "| 16      | number_outpatient          | Number of outpatient visits in the year preceding the encounter                 |\n",
+    "| 17      | number_emergency           | Number of emergency visits in the year preceding the encounter                  |\n",
+    "| 18      | number_inpatient           | Number of inpatient visits in the year preceding the encounter                  |\n",
+    "| 19      | diag_1                     | Primary diagnosis (coded as first three digits of ICD-9; 848 distinct values)   |\n",
+    "| 20      | diag_2                     | Secondary diagnosis (coded as first three digits of ICD-9; 923 distinct values) |\n",
+    "| 21      | diag_3                     | Additional diagnosis (coded as first three digits of ICD-9; 954 distinct values)|\n",
+    "| 22      | number_diagnoses           | Number of diagnoses entered                                                     |\n",
+    "| 23      | max_glu_serum              | Serum glucose test result range: >200, >300, normal, none                       |\n",
+    "| 24      | A1Cresult                  | Test result categories: >8, >7, normal, none                                    |\n",
+    "| 25      | metformin                  | Drug prescription change: up, down, steady, or no                               |\n",
+    "| 26      | repaglinide                | Same as above                                                                    |\n",
+    "| 27      | nateglinide                | Same as above                                                                    |\n",
+    "| 28      | chlorpropamide             | Same as above                                                                    |\n",
+    "| 29      | glimepiride                | Same as above                                                                    |\n",
+    "| 30      | acetohexamide              | Same as above                                                                    |\n",
+    "| 31      | glipizide                  | Same as above                                                                    |\n",
+    "| 32      | glyburide                  | Same as above                                                                    |\n",
+    "| 33      | tolbutamide                | Same as above                                                                    |\n",
+    "| 34      | pioglitazone               | Same as above                                                                    |\n",
+    "| 35      | rosiglitazone              | Same as above                                                                    |\n",
+    "| 36      | acarbose                   | Same as above                                                                    |\n",
+    "| 37      | miglitol                   | Same as above                                                                    |\n",
+    "| 38      | troglitazone               | Same as above                                                                    |\n",
+    "| 39      | tolazamide                 | Same as above                                                                    |\n",
+    "| 40      | examide                    | Same as above                                                                    |\n",
+    "| 41      | citoglipton                | Same as above                                                                    |\n",
+    "| 42      | insulin                    | Same as above                                                                    |\n",
+    "| 43      | glyburide-metformin        | Same as above                                                                    |\n",
+    "| 44      | glipizide-metformin        | Same as above                                                                    |\n",
+    "| 45      | glimepiride-pioglitazone   | Same as above                                                                    |\n",
+    "| 46      | metformin-rosiglitazone    | Same as above                                                                    |\n",
+    "| 47      | metformin-pioglitazone     | Same as above                                                                    |\n",
+    "| 48      | change                     | Indicates medication change: change or no change                                |\n",
+    "| 49      | diabetesMed                | Indicates if diabetic medication was prescribed                                 |\n",
+    "| 50      | readmitted                 | Readmission: <30 days, >30 days, or no readmission                               |"
    ]
   },
   {
