Check for missing value & duplicates, EDA intro

--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -1286,13 +1286,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking for Duplicates and Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows: 0\n",
+      "\n",
+      "Number of missing values in each column:\n",
+      "encounter_id: 0\n",
+      "patient_nbr: 0\n",
+      "race: 0\n",
+      "gender: 0\n",
+      "age: 0\n",
+      "weight: 0\n",
+      "admission_type_id: 0\n",
+      "discharge_disposition_id: 0\n",
+      "admission_source_id: 0\n",
+      "time_in_hospital: 0\n",
+      "payer_code: 0\n",
+      "medical_specialty: 0\n",
+      "num_lab_procedures: 0\n",
+      "num_procedures: 0\n",
+      "num_medications: 0\n",
+      "number_outpatient: 0\n",
+      "number_emergency: 0\n",
+      "number_inpatient: 0\n",
+      "diag_1: 0\n",
+      "diag_2: 0\n",
+      "diag_3: 0\n",
+      "number_diagnoses: 0\n",
+      "max_glu_serum: 0\n",
+      "A1Cresult: 0\n",
+      "metformin: 0\n",
+      "repaglinide: 0\n",
+      "nateglinide: 0\n",
+      "chlorpropamide: 0\n",
+      "glimepiride: 0\n",
+      "acetohexamide: 0\n",
+      "glipizide: 0\n",
+      "glyburide: 0\n",
+      "tolbutamide: 0\n",
+      "pioglitazone: 0\n",
+      "rosiglitazone: 0\n",
+      "acarbose: 0\n",
+      "miglitol: 0\n",
+      "troglitazone: 0\n",
+      "tolazamide: 0\n",
+      "examide: 0\n",
+      "citoglipton: 0\n",
+      "insulin: 0\n",
+      "glyburide-metformin: 0\n",
+      "glipizide-metformin: 0\n",
+      "glimepiride-pioglitazone: 0\n",
+      "metformin-rosiglitazone: 0\n",
+      "metformin-pioglitazone: 0\n",
+      "change: 0\n",
+      "diabetesMed: 0\n",
+      "readmitted: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Check for duplicates\n",
+    "duplicates = df.duplicated().sum()\n",
+    "print(f\"Number of duplicate rows: {duplicates}\")\n",
+    "\n",
+    "# Loop through columns and check for missing values\n",
+    "print(\"\\nNumber of missing values in each column:\")\n",
+    "for column in df.columns:\n",
+    "    missing_values = df[column].isnull().sum()\n",
+    "    print(f\"{column}: {missing_values}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- As can be seen above, no columns have missing values\n",
+    "\n",
+    "### EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "def visualize_distributions(df):\n",
+    "    # Separate numerical and categorical columns\n",
+    "    df_numerical = df.select_dtypes(include=['int64', 'float64'])\n",
+    "    df_categorical = df.select_dtypes(include=['object', 'category'])\n",
+    "\n",
+    "    # Plot numerical columns\n",
+    "    if not df_numerical.empty:\n",
+    "        print(\"Visualizing numerical columns:\")\n",
+    "        for column in df_numerical.columns:\n",
+    "            plt.figure(figsize=(8, 6))\n",
+    "            sns.histplot(df_numerical[column], kde=True, bins=30, color='blue')\n",
+    "            plt.title(f'Distribution of {column}', fontsize=16)\n",
+    "            plt.xlabel(column, fontsize=14)\n",
+    "            plt.ylabel('Frequency', fontsize=14)\n",
+    "            plt.show()\n",
+    "    else:\n",
+    "        print(\"No numerical columns found.\")\n",
+    "\n",
+    "    # Plot categorical columns\n",
+    "    if not df_categorical.empty:\n",
+    "        print(\"Visualizing categorical columns:\")\n",
+    "        for column in df_categorical.columns:\n",
+    "            plt.figure(figsize=(8, 6))\n",
+    "            df_categorical[column].value_counts().plot.pie(autopct='%1.1f%%', startangle=90, colors=sns.color_palette('pastel'))\n",
+    "            plt.title(f'Distribution of {column}', fontsize=16)\n",
+    "            plt.ylabel('')  # Remove the y-axis label\n",
+    "            plt.show()\n",
+    "    else:\n",
+    "        print(\"No categorical columns found.\")\n",
+    "\n",
+    "# Apply fn\n",
+    "#visualize_distributions(df)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "##"
-   ]
+   "source": []
   }
  ],
  "metadata": {
