--- a/Index.ipynb
+++ b/Index.ipynb
@@ -1250,6 +1250,58 @@
     "unique_values = df2['admission_type_id'].unique()\n",
     "print(unique_values)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data preprocessing\n",
+    "\n",
+    "## Significant Features for Predicting Readmission in Diabetic Patients\n",
+    "\n",
+    "### 1. **Demographics**\n",
+    "   - `race`\n",
+    "   - `gender`\n",
+    "   - `age`\n",
+    "   - `weight`\n",
+    "\n",
+    "### 2. **Hospital Admission & Stay Details**\n",
+    "   - `admission_type_id`\n",
+    "   - `discharge_disposition_id`\n",
+    "   - `admission_source_id`\n",
+    "   - `time_in_hospital`\n",
+    "\n",
+    "### 3. **Medical & Diagnosis Information**\n",
+    "   - `diag_1`\n",
+    "   - `diag_2`\n",
+    "   - `diag_3`\n",
+    "   - `number_diagnoses`\n",
+    "   - `medical_specialty`\n",
+    "\n",
+    "### 4. **Laboratory & Test Results**\n",
+    "   - `num_lab_procedures`\n",
+    "   - `max_glu_serum`\n",
+    "   - `A1Cresult`\n",
+    "\n",
+    "### 5. **Treatment & Medications**\n",
+    "   - `num_procedures`\n",
+    "   - `num_medications`\n",
+    "   - `insulin`\n",
+    "   - `metformin`\n",
+    "   - `change` (indicating if medication was changed)\n",
+    "   - `diabetesMed` (whether the patient is on diabetes medication)\n",
+    "\n",
+    "### 6. **Previous Hospital Visits**\n",
+    "   - `number_outpatient`\n",
+    "   - `number_emergency`\n",
+    "   - `number_inpatient`\n",
+    "\n",
+    "### 7. **Readmission Indicator (Target Variable)**\n",
+    "   - `readmitted`\n",
+    "\n",
+    "\n",
+    " "
+   ]
   }
  ],
  "metadata": {
