--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -3685,11 +3685,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_encoded = pd.concat([df_numerical, df_categorical], axis =1)"
+    "df_encoded = pd.concat([df_numerical, encoded_df], axis =1)"
    ]
   },
   {
@@ -3709,7 +3709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -3739,7 +3739,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The imbalance will be handled through class weights and sampling techniques"
+    "- The imbalance will be handled through class weights and sampling techniques\n",
+    "\n",
+    "\n",
+    "Train-test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "# Train-test split\n",
+    "X = df_encoded.drop(columns=['readmitted'])\n",
+    "y = df_encoded['readmitted']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Baseline models: Logistic Regressiona and Decision Trees with default parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**Unbalanced Models:**\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, ConfusionMatrixDisplay\n",
+    "\n",
+    "# Logistic Regression and Decision Tree without balancing\n",
+    "print(\"\\n**Unbalanced Models:**\")\n",
+    "logreg = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "logreg.fit(X_train, y_train)\n",
+    "y_pred_logreg = logreg.predict(X_test)\n",
+    "print(\"\\nLogistic Regression (Unbalanced):\")\n",
+    "print(classification_report(y_test, y_pred_logreg))\n",
+    "\n",
+    "dtree = DecisionTreeClassifier(random_state=42)\n",
+    "dtree.fit(X_train, y_train)\n",
+    "y_pred_dtree = dtree.predict(X_test)\n",
+    "print(\"\\nDecision Tree (Unbalanced):\")\n",
+    "print(classification_report(y_test, y_pred_dtree))"
    ]
   },
   {
@@ -3747,7 +3804,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, ConfusionMatrixDisplay\n",
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Logistic Regression and Decision Tree without balancing\n",
+    "print(\"\\n**Unbalanced Models:**\")\n",
+    "logreg = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "logreg.fit(X_train, y_train)\n",
+    "y_pred_logreg = logreg.predict(X_test)\n",
+    "print(\"\\nLogistic Regression (Unbalanced):\")\n",
+    "print(classification_report(y_test, y_pred_logreg))\n",
+    "\n",
+    "dtree = DecisionTreeClassifier(random_state=42)\n",
+    "dtree.fit(X_train, y_train)\n",
+    "y_pred_dtree = dtree.predict(X_test)\n",
+    "print(\"\\nDecision Tree (Unbalanced):\")\n",
+    "print(classification_report(y_test, y_pred_dtree))\n",
+    "\n",
+    "# Logistic Regression with balanced class weights\n",
+    "print(\"\\n**Balanced Class Weight Models:**\")\n",
+    "logreg_balanced = LogisticRegression(max_iter=1000, class_weight='balanced', random_state=42)\n",
+    "logreg_balanced.fit(X_train, y_train)\n",
+    "y_pred_logreg_bal = logreg_balanced.predict(X_test)\n",
+    "print(\"\\nLogistic Regression (Balanced Class Weights):\")\n",
+    "print(classification_report(y_test, y_pred_logreg_bal))\n",
+    "\n",
+    "dtree_balanced = DecisionTreeClassifier(class_weight='balanced', random_state=42)\n",
+    "dtree_balanced.fit(X_train, y_train)\n",
+    "y_pred_dtree_bal = dtree_balanced.predict(X_test)\n",
+    "print(\"\\nDecision Tree (Balanced Class Weights):\")\n",
+    "print(classification_report(y_test, y_pred_dtree_bal))\n",
+    "\n",
+    "# SMOTE for Oversampling\n",
+    "print(\"\\n**SMOTE Models:**\")\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_smote, y_train_smote = smote.fit_resample(X_train, y_train)\n",
+    "\n",
+    "logreg_smote = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "logreg_smote.fit(X_train_smote, y_train_smote)\n",
+    "y_pred_logreg_smote = logreg_smote.predict(X_test)\n",
+    "print(\"\\nLogistic Regression (SMOTE):\")\n",
+    "print(classification_report(y_test, y_pred_logreg_smote))\n",
+    "\n",
+    "dtree_smote = DecisionTreeClassifier(random_state=42)\n",
+    "dtree_smote.fit(X_train_smote, y_train_smote)\n",
+    "y_pred_dtree_smote = dtree_smote.predict(X_test)\n",
+    "print(\"\\nDecision Tree (SMOTE):\")\n",
+    "print(classification_report(y_test, y_pred_dtree_smote))\n"
+   ]
   }
  ],
  "metadata": {
