Add class imbalance handling: SMOTE and class weights

--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -3767,7 +3767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -3776,6 +3776,50 @@
      "text": [
       "\n",
       "**Unbalanced Models:**\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/leo/anaconda3/envs/learn-env/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Logistic Regression (Unbalanced):\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.61      0.87      0.71     10952\n",
+      "           1       0.51      0.33      0.40      7117\n",
+      "           2       0.38      0.02      0.04      2285\n",
+      "\n",
+      "    accuracy                           0.58     20354\n",
+      "   macro avg       0.50      0.41      0.39     20354\n",
+      "weighted avg       0.55      0.58      0.53     20354\n",
+      "\n",
+      "\n",
+      "Decision Tree (Unbalanced):\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.59      0.59      0.59     10952\n",
+      "           1       0.39      0.40      0.39      7117\n",
+      "           2       0.16      0.16      0.16      2285\n",
+      "\n",
+      "    accuracy                           0.47     20354\n",
+      "   macro avg       0.38      0.38      0.38     20354\n",
+      "weighted avg       0.47      0.47      0.47     20354\n",
+      "\n"
      ]
     }
    ],
@@ -3800,32 +3844,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Handling Class Imbalance through Class weights and SMOTE\n",
+    "- Applying Class weights"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**Balanced Class Weight Models:**\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import classification_report, ConfusionMatrixDisplay\n",
-    "from sklearn.utils.class_weight import compute_class_weight\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Logistic Regression and Decision Tree without balancing\n",
-    "print(\"\\n**Unbalanced Models:**\")\n",
-    "logreg = LogisticRegression(max_iter=1000, random_state=42)\n",
-    "logreg.fit(X_train, y_train)\n",
-    "y_pred_logreg = logreg.predict(X_test)\n",
-    "print(\"\\nLogistic Regression (Unbalanced):\")\n",
-    "print(classification_report(y_test, y_pred_logreg))\n",
-    "\n",
-    "dtree = DecisionTreeClassifier(random_state=42)\n",
-    "dtree.fit(X_train, y_train)\n",
-    "y_pred_dtree = dtree.predict(X_test)\n",
-    "print(\"\\nDecision Tree (Unbalanced):\")\n",
-    "print(classification_report(y_test, y_pred_dtree))\n",
     "\n",
     "# Logistic Regression with balanced class weights\n",
     "print(\"\\n**Balanced Class Weight Models:**\")\n",
@@ -3840,7 +3880,22 @@
     "y_pred_dtree_bal = dtree_balanced.predict(X_test)\n",
     "print(\"\\nDecision Tree (Balanced Class Weights):\")\n",
     "print(classification_report(y_test, y_pred_dtree_bal))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Applying SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# SMOTE for Oversampling\n",
     "print(\"\\n**SMOTE Models:**\")\n",
     "smote = SMOTE(random_state=42)\n",
