--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -3880,7 +3880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3892,18 +3892,52 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'SMOTE' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-46-098307dab9aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# SMOTE for Oversampling\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n**SMOTE Models:**\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msmote\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSMOTE\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mX_train_smote\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_smote\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msmote\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_resample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'SMOTE' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/leo/anaconda3/envs/learn-env/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Logistic Regression (SMOTE):\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.68      0.52      0.59     10952\n",
+      "           1       0.44      0.42      0.43      7117\n",
+      "           2       0.18      0.42      0.25      2285\n",
+      "\n",
+      "    accuracy                           0.47     20354\n",
+      "   macro avg       0.43      0.45      0.42     20354\n",
+      "weighted avg       0.54      0.47      0.49     20354\n",
+      "\n",
+      "\n",
+      "Decision Tree (SMOTE):\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.59      0.58      0.59     10952\n",
+      "           1       0.40      0.40      0.40      7117\n",
+      "           2       0.16      0.17      0.16      2285\n",
+      "\n",
+      "    accuracy                           0.47     20354\n",
+      "   macro avg       0.38      0.38      0.38     20354\n",
+      "weighted avg       0.48      0.47      0.47     20354\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "from imblearn.over_sampling import SMOTE\n",
     "# SMOTE for Oversampling\n",
     "print(\"\\n**SMOTE Models:**\")\n",
     "smote = SMOTE(random_state=42)\n",
@@ -3921,6 +3955,13 @@
     "print(\"\\nDecision Tree (SMOTE):\")\n",
     "print(classification_report(y_test, y_pred_dtree_smote))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
