--- a/Notebooks/JohnMbego.ipynb
+++ b/Notebooks/JohnMbego.ipynb
@@ -1212,7 +1212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <span style='color :green'> *Feature engineering*<span>"
+    "#### <span style='color :green'> *Feature Selection*<span>"
    ]
   },
   {
