--- a/Notebooks/Kitasi.ipynb
+++ b/Notebooks/Kitasi.ipynb
@@ -20,7 +20,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Abstract\n",
+    "\n",
+    "### <span style=\"color:#081d58\">***Abstract***</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "Hospital readmissions for diabetic patients present a significant challenge to healthcare systems, leading to increased costs and adverse patient outcomes. Despite advancements in diabetes management, many patients experience early readmissions within 30 days of discharge due to inconsistent glycemic control and inadequate follow-up care. This study utilizes a dataset covering ten years (1999–2008) of clinical care data from 130 U.S. hospitals to develop a predictive model for early readmissions. Using machine learning techniques, we analyze patient demographics, laboratory results, medications, and clinical procedures to identify key factors influencing readmissions. The findings from this research can assist healthcare providers in implementing targeted interventions to reduce readmission rates, improve diabetes management, and enhance overall patient care."
    ]
@@ -29,7 +37,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction"
+    "\n",
+    "## <span style=\"color:#081d58\">Introduction</span>"
    ]
   },
   {
@@ -45,7 +54,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem statement"
+    "\n",
+    "## <span style=\"color:#081d58\">Problem statement</span>\n"
    ]
   },
   {
@@ -63,7 +73,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objectives\n",
+    "\n",
+    "## <span style=\"color:#081d58\">Problem Objectives</span>\n",
     "\n",
     "#### Primary Objectives\n",
     "\n",
@@ -90,7 +101,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Methodology/ Approach:\n",
+    "## <span style=\"color:#081d58\">Methodology/ Approach:</span>\n",
+    "\n",
     "\n",
     " -  Data collection\n",
     " -  Data Prepocessing\n",
@@ -110,7 +122,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Limitations\n",
+    "\n",
+    "## <span style=\"color:#081d58\">Limitations:</span>\n",
     "\n",
     " 1. Data Quality and Completeness:\n",
     " \n",
@@ -1367,7 +1380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Handling columns with missing values"
+    "### -  Handling columns with missing values"
    ]
   },
   {
@@ -1483,7 +1496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Checking and handling duplicate columns"
+    "### - Checking and handling duplicate columns"
    ]
   },
   {
@@ -1562,7 +1575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3 Removing unnecessary columns"
+    "### -Removing unnecessary columns"
    ]
   },
   {
@@ -1608,7 +1621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.1 Frequecy of Readmission"
+    "#### - Frequecy of Readmission"
    ]
   },
   {
@@ -1653,7 +1666,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.2 Distribution of Time(Day) in Hospital"
+    "#### - Distribution of Time(Day) in Hospital"
    ]
   },
   {
@@ -1695,7 +1708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.3 Age Distribution"
+    "#### - Age Distribution"
    ]
   },
   {
@@ -1743,7 +1756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.4 Medication Prescription Frequency"
+    "#### - Medication Prescription Frequency"
    ]
   },
   {
@@ -1834,6 +1847,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### - Change vs Readmissions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 297,
    "metadata": {},
@@ -1863,6 +1883,13 @@
     "Uncontrolled symptoms or complications.\n",
     "Changes in patient response to medication.\n",
     "Doctors optimizing treatment based on lab results or diagnosis updates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### - Insulin vs Readmissions"
    ]
   },
   {
@@ -1899,7 +1926,7 @@
    "source": [
     "## `3. multivariate analysis`\n",
     "\n",
-    "##### 3.1 Admission Type, Time in Hospital, and Readmission"
+    "##### - Admission Type, Time in Hospital, and Readmission"
    ]
   },
   {
@@ -1948,6 +1975,18 @@
     "- Elective procedures lead to longer hospital stays for patients who eventually get readmitted.\n",
     "- Longer hospital stays are associated with early readmission, especially in trauma cases.\n",
     "- Newborns have lower readmission rates and shorter hospital stays."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### - num_procedures,  num_medications vs readmitted"
    ]
   },
   {
@@ -2052,7 +2091,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Feature Segregation  \n",
+    "\n",
+    "## <span style=\"color:#081d58\">(a) Feature Segregation  </span>\n",
     "Feature segregation is a crucial step in data preprocessing, where features are classified based on their data types to ensure that appropriate transformations and analyses are applied. This process involves organizing the dataset into distinct categories, primarily focusing on:\n",
     "\n",
     "- Numerical Features: These are quantitative variables that represent measurable quantities.\n",
@@ -2214,7 +2254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Checking for outliers in the numerical columns"
+    "#### Checking for outliers in the numerical columns"
    ]
   },
   {
@@ -3151,7 +3191,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Feature Aggregation"
+    "\n",
+    "## <span style=\"color:#081d58\">(a) Feature Aggregation  </span>"
    ]
   },
   {
@@ -3423,7 +3464,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Data Splitting\n",
+    "## <span style=\"color:#081d58\">(c) Data Splitting</span>\n",
+    "\n",
     "Data splitting refers to the process of partitioning a dataset into distinct subsets, typically for the purposes of training and evaluating machine learning models. The main objective of this step is to evaluate the model's ability to generalize to new, unseen data, ensuring that it performs well not just on the data it was trained on but also on data it encounters in real-world scenarios"
    ]
   },
@@ -3464,7 +3506,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.5 Feature Selection\n",
+    "\n",
+    "## <span style=\"color:#081d58\">(d) Feature Selection</span>\n",
     "Since my dataset has more that 40 columns, I will apply feature selection using the `Corrwith()`to check how each feature relates with the target variable - readmitted."
    ]
   },
@@ -3519,7 +3562,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Handlng class Imbalance\n",
+    "\n",
+    "## <span style=\"color:#081d58\">(e) class Imbalance</span>\n",
     "\n",
     "Class imbalance occurs in classification problems when the number of observations in one class is significantly higher than in others. Handling class imbalance is crucial in machine learning to ensure that the model does not become biased toward the majority class. One effective way to address class imbalance is by using `class weights`. Class weights adjust the loss function during training to give more importance to the minority class, helping the model learn better from imbalanced data."
    ]
