--- a/Notebooks/Kitasi.ipynb
+++ b/Notebooks/Kitasi.ipynb
@@ -20,6 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![My Image](rk_img.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### <span style=\"color:#081d58\">***Abstract***</span>"
    ]
