--- a/Index.ipynb
+++ b/Index.ipynb
@@ -461,7 +461,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Checking the variables on the target variable**"
+    "\n",
+    "\n",
+    "<h4 style=\"color:#FFD700; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "    Checking the variables on the target variable\n",
+    "</h4>"
    ]
   },
   {
@@ -524,7 +528,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Imbalanced Classes:** \n",
+    "\n",
+    "\n",
+    "<h4 style=\"color:#FFD700; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "    Imbalanced Classes\n",
+    "</h4>\n",
     "\n",
     "The dataset exhibits a significant class imbalance, with a much larger number of patients classified as \"NO\" compared to those who are readmitted within 30 days (<30). This imbalance can lead to biased models that may predict the majority class more often, potentially overlooking the minority class."
    ]
@@ -533,14 +541,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DATA CLEANING"
+    "\n",
+    "\n",
+    "<h2 style=\"color:#ff8000; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "    DATA CLEANING\n",
+    "</h2>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Handling the missing values"
+    "\n",
+    "<h4 style=\"color:#FFD700; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "    Handling the missing values\n",
+    "</h4>\n"
    ]
   },
   {
@@ -1891,14 +1906,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EXPLANATORY DATA ANALYSIS"
+    "\n",
+    "<h2 style=\"color:#ff8000; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "    EXPLANATORY DATA ANALYSIS\n",
+    "</h2>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exploratory Data Analysis (EDA) is an essential step in understanding a dataset before applying machine learning models or making conclusions. It involves summarizing and visualizing key features to identify patterns, relationships, and potential anomalies in the data.\n",
+    "Explanatory Data Analysis (EDA) is an essential step in understanding a dataset before applying machine learning models or making conclusions. It involves summarizing and visualizing key features to identify patterns, relationships, and potential anomalies in the data.\n",
     "\n",
     "I will focus on the following visualizations.\n",
     "\n",
@@ -1927,7 +1945,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Correlation matrix"
+    "\n",
+    "<h4 style=\"color:#FFD700; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "   1. Correlation matrix\n",
+    "</h4>"
    ]
   },
   {
@@ -2019,9 +2040,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Univariate Analysis.\n",
     "\n",
-    "#### 2. Demoraphics Insights\n"
+    "<h2 style=\"color:#ff8000; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "   Univariate Analysis.\n",
+    "</h2>\n",
+    "\n",
+    "\n",
+    "<h3 style=\"color:#FFD700; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "    Demoraphics Insights\n",
+    "</h3>\n"
    ]
   },
   {
