--- a/Notebooks/JohnMbego.ipynb
+++ b/Notebooks/JohnMbego.ipynb
@@ -2091,7 +2091,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project not only provides a robust predictive tool for managing diabetic patient readmissions but also offers valuable insights that can drive improvements in diabetes care and healthcare resource management.  (**draft to disc**)"
+    "**🔻Disclaimer:** This project provides a predictive tool for assessing the risk of 30-day hospital readmissions among diabetic patients. While the model offers valuable insights for improving diabetes care and healthcare resource management, it should not replace clinical judgment or personalized medical assessments. The predictions are based on available data and statistical analysis, and their accuracy may vary across different patient populations and healthcare settings. Healthcare professionals should use this tool as a supplementary aid alongside comprehensive clinical evaluations and evidence-based practices."
    ]
   }
  ],
