--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -3181,15 +3181,104 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Applying XGB boost with balanced weights"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Compute scale_pos_weight\n",
+    "pos_weight = np.bincount(y_train_bin)[0] / np.bincount(y_train_bin)[1]\n",
+    "\n",
+    "# Train XGBoost model with scale_pos_weight\n",
+    "xgb_bin = XGBClassifier(\n",
+    "    use_label_encoder=False,\n",
+    "    eval_metric='logloss',\n",
+    "    scale_pos_weight=pos_weight,  # Handling class imbalance\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Fit model\n",
+    "xgb_bin.fit(X_train, y_train_bin)\n",
+    "\n",
+    "# Predict and evaluate\n",
+    "y_pred_xgb_bin = xgb_bin.predict(X_test)\n",
+    "print(\"\\nXGBoost (Binary Target with scale_pos_weight):\")\n",
+    "print(classification_report(y_test_bin, y_pred_xgb_bin))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Tuning\n",
+    "- Using GridSearchCV to get best parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define hyperparameter grid\n",
+    "param_grid = {\n",
+    "    'max_depth': [3, 6],  # Controls tree depth, reducing for speed\n",
+    "    'learning_rate': [0.01, 0.1],  # Small and moderate learning rates\n",
+    "    'n_estimators': [50, 100],  # Reduce number of trees for faster training\n",
+    "    'subsample': [0.8],  # Fixed to avoid unnecessary search\n",
+    "    'colsample_bytree': [0.8],  # Feature sampling, fixed for speed\n",
+    "    'gamma': [0, 0.1],  # Controls regularization, minimal values\n",
+    "    'reg_lambda': [1],  # L2 Regularization, keeping constant for speed\n",
+    "    'scale_pos_weight': [pos_weight]  # Ensures class imbalance is handled\n",
+    "}\n",
+    "\n",
+    "# Initialize XGBClassifier\n",
+    "xgb_grid = XGBClassifier(\n",
+    "    use_label_encoder=False,\n",
+    "    eval_metric='logloss',\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Perform Grid Search\n",
+    "grid_search = GridSearchCV(\n",
+    "    xgb_grid,\n",
+    "    param_grid,\n",
+    "    scoring='f1',  # F1-score to balance precision & recall\n",
+    "    cv=3,  # 3-fold CV to speed up search\n",
+    "    n_jobs=-1,  # Use all available cores\n",
+    "    verbose=2\n",
+    ")\n",
+    "\n",
+    "# Fit Grid Search\n",
+    "grid_search.fit(X_train, y_train_bin)\n",
+    "\n",
+    "# Print best parameters and best score\n",
+    "print(\"\\nBest Parameters:\", grid_search.best_params_)\n",
+    "print(\"\\nBest F1 Score:\", grid_search.best_score_)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
